Fix togglehome not tab completing the HomeAccessType, fix error message missing param